--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "serve": "webpack serve"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.0",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/preset-env": "^7.15.0",
     "@types/reflect-metadata": "^0.1.0",
+    "@types/webpack-env": "^1.16.2",
+    "babel-loader": "^8.2.2",
     "circular-dependency-plugin": "^5.2.2",
     "core-js": "^3.9.1",
     "css-loader": "^5.1.3",
@@ -25,6 +30,7 @@
   "dependencies": {
     "elkjs": "^0.7.1",
     "sprotty": "^0.9.0",
-    "sprotty-elk": "^0.9.0"
+    "sprotty-elk": "^0.9.0",
+    "stimulus": "^2.0.0"
   }
 }
